--- a/src/public/templates/application.html
+++ b/src/public/templates/application.html
@@ -1,3 +1,3 @@
-<div>
-    <p>Oops! Something went wrong rendering an Application Window for Fabricate.</p>
+<div class="fab-application-container">
+
 </div>
