feature: Start rebuilding crafting system manager app with svelte
- styles the left system nav and the tabs

--- a/src/public/templates/partials/alchemy-tab.hbs
+++ b/src/public/templates/partials/alchemy-tab.hbs
@@ -1,6 +1,6 @@
 <div class="fabricate-alchemy">
     <p>
-        Alchemy is a process by which an item is modified by combining specific ingredients to produce one or more
+        Alchemy is a process by which an system is modified by combining specific ingredients to produce one or more
         effects. Not every crafting system includes alchemy. In fact, most crafting systems don't!
     </p>
     <hr/>
