--- a/src/public/templates/partials/components-tab.hbs
+++ b/src/public/templates/partials/components-tab.hbs
@@ -3,7 +3,7 @@
         Components are the items that are consumed and produced by the crafting activities in your system.
     </p>
     <div class="fabricate-drop-zone fabricate-wide" data-drop-trigger="createComponent">
-        <i class="fa-solid fa-plus" style="pointer-events: none"></i> Drop an item here to create a component
+        <i class="fa-solid fa-plus" style="pointer-events: none"></i> Drop an system here to create a component
     </div>
     <table class="fabricate-item-table">
         <thead class="fabricate-item-table-header">
