--- a/src/public/templates/recipe-tab.hbs
+++ b/src/public/templates/recipe-tab.hbs
@@ -56,7 +56,7 @@
             </ul>
         </div>
     </div>
-    {{#if item.isOwned}}
+    {{#if system.isOwned}}
     <div class="controls">
         {{#if system.enabled}}
             {{#if isCraftable}}
