--- a/src/public/templates/partials/recipes-tab.hbs
+++ b/src/public/templates/partials/recipes-tab.hbs
@@ -3,7 +3,7 @@
         Recipes provide characters with the ability to repeatedly craft componentIds.
     </p>
     <div class="fabricate-drop-zone fabricate-wide" data-drop-trigger="createRecipe">
-        <i class="fa-solid fa-plus" style="pointer-events: none"></i> Drop an item here to create a recipe
+        <i class="fa-solid fa-plus" style="pointer-events: none"></i> Drop an system here to create a recipe
     </div>
     <table class="fabricate-item-table">
         <thead class="fabricate-item-table-header">
