--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1,72 +1,29 @@
 /*
 =====================================================================
-BEGIN CSS VARIABLE REFERENCE
+BEGIN CSS VARIABLES
 =====================================================================
 */
 
 .fab-fabricate-theme {
-  --color-text-light-heading: #bea487;
+  --color-text-light-heading: #e5c6a3;
   --color-text-light-primary: #878485;
+  --color-text-light-secondary: #969498;
+  --color-text-light-tertiary: #c9c6cc;
   --color-text-dark-primary: #7b6143;
   --color-text-dark-header: #7b6143;
-  --color-text-dark-inactive: #7b6143;
-  --color-text-hyperlink: #9a8267;
-  --color-text-light-0: #888586;
-  --color-text-light-1: #888586;
-  --color-text-light-2: #888586;
-  --color-text-light-3: #8f8c8e;
-  --color-text-light-4: #888586;
-  --color-text-light-5: #888586;
-  --color-text-light-6: #888586;
-  --color-text-light-7: #888586;
-  --color-text-dark-1: #7b6143;
-  --color-text-dark-2: #7b6143;
-  --color-text-dark-3: #7b6143;
-  --color-text-dark-4: #7b6143;
-  --color-text-dark-5: #7b6143;
-  --color-text-dark-6: #7b6143;
-  --color-border-light-1: #463e38;
-  --color-border-light-2: #463e38;
+  --color-border-light-1: #7b6143;
+  --color-border-light-2: #a1815c;
   --color-border-dark-1: #26211e;
-  --color-border-dark-2: #26211e;
-  --color-border-dark-3: #26211e;
-  --color-border-dark-4: #26211e;
-  --color-border-dark-5: #26211e;
-  --color-bg-btn-minor-inactive: #b2aaa5;
-  --color-bg-btn-minor-active: #d6cae3;
-  --color-bg-option: #3e3a37;
-  --color-ownership-none: #5500ff;
-  --color-ownership-observer: #7a7971;
-  --color-ownership-owner: #b5b3a4;
-  --sidebar-width: 300px;
-  --sidebar-header-height: 32px;
-  --sidebar-item-height: 48px;
-  --hotbar-height: 52px;
-  --hotbar-width: 578px;
-  --macro-size: 50px;
-  --players-width: 200px;
-  --form-field-height: 26px;
-  --font-primary: "Signika", sans-serif;
-  --font-mono: monospace;
-  --font-awesome: "Font Awesome 6 Pro";
-  --font-size-11: 0.6875rem;
-  --font-size-12: 0.75rem;
-  --font-size-13: 0.8125rem;
-  --font-size-14: 0.875rem;
-  --font-size-16: 1rem;
-  --font-size-18: 1.125rem;
-  --font-size-20: 1.25rem;
-  --font-size-24: 1.5rem;
-  --font-size-28: 1.75rem;
-  --font-size-32: 2rem;
-  --font-size-48: 3rem;
-  --line-height-12: 0.75rem;
-  --line-height-16: 1rem;
-  --line-height-20: 1.25rem;
-  --line-height-30: 1.875rem;
-  --color-level-info: #5c87b9;
-  --color-level-warning: #b18404;
-  --color-level-error: #8c353a;
+  --color-border-dark-2: #463e38;
+  --color-background-dark-1: #2c2a2e;
+  --color-background-dark-2: #3e3a37;
+  --color-background-dark-3: #37353a;
+  --color-background-dark-4: #2c2b2e;
+  --color-btn-darkbg-inactive: #b2aaa5;
+  --color-btn-darkbg-active: #decfee;
+  --color-btn-ctx-menu-inactive: #86725b;
+  --color-btn-ctx-menu-active: #b29a7e;
+  --error: #8c353a;
 }
 
 /*
@@ -82,22 +39,143 @@ BEGIN FABRICATE THEME STYLES
 */
 
 .fab-application-window.fab-fabricate-theme {
+
   .window-content {
     background: #2c2a2e;
     padding: 0;
-    color: var(--color-text-light-3);
+    color: var(--color-text-light-primary);
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     button {
       background: none;
       border: none;
-      color: var(--color-bg-btn-minor-inactive);
-      &:hover {
-        box-shadow: none;
-      }
+      color: inherit;
+      box-shadow: none !important;
     }
     h1, h2, h3, h4, h5, h6 {
       border-bottom: none;
     }
+    button {
+      i {
+        margin-right: 8px;
+      }
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: var(--color-text-light-secondary);
+      &:hover {
+        color: var(--color-text-light-tertiary)
+      }
+    }
   }
+
+  .fab-vertical-nav {
+    border: 3px solid var(--color-border-dark-1);
+    box-shadow: 0 0 0 2px var(--color-border-light-1);
+    margin: 2px;
+    background: var(--color-background-dark-3);
+    hr {
+      border-top: 1px solid rgba(0, 0, 0, 0.3);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+      margin: 0 10px;
+    }
+    .fab-header {
+      background: var(--color-text-dark-header);
+      color: var(--color-text-light-heading);
+      h1 {
+        font-size: var(--font-size-18);
+      }
+    }
+    .fab-nav-item {
+      color: var(--color-text-light-secondary);
+      &:hover {
+        .fab-button {
+          p {
+            color: var(--color-text-light-tertiary);
+          }
+          i.fa-circle {
+            color: var(--color-text-light-tertiary);
+          }
+        }
+      }
+      &.fab-selected {
+        .fab-button {
+          p {
+            color: var(--color-border-light-2);
+            font-weight: bold;
+          }
+          i.fa-circle {
+            color: var(--color-border-light-1);
+          }
+        }
+      }
+      .fab-button {
+        cursor: pointer;
+        i.fa-circle-exclamation {
+          color: var(--error);
+          &::after {
+            border-radius: 50%;
+            content: "";
+            background: #dbd4e5;
+            display: flex;
+            height: 18px;
+            width: 18px;
+            top: 1px;
+            left: 1px;
+            position: absolute;
+            z-index: -1;
+          }
+        }
+      }
+      .fab-context-menu {
+        background: var(--color-background-dark-4);
+        padding-bottom: 10px;
+        .fab-description {
+          padding: 10px;
+          margin: 0;
+        }
+        .fab-ctx-menu-buttons {
+          padding-top: 10px;
+          padding-left: 10px;
+          button {
+            color: var(--color-btn-ctx-menu-inactive);
+            justify-content: flex-start;
+            &:hover {
+              color: var(--color-btn-ctx-menu-active);
+            }
+          }
+        }
+      }
+      &:last-child > hr {
+        display: none;
+      }
+    }
+    .fab-footer {
+      background: var(--color-background-dark-2);
+      button {
+        color: var(--color-btn-darkbg-inactive);
+        &:hover {
+          color: var(--color-btn-darkbg-active);
+        }
+      }
+    }
+  }
+
+  .fab-crafting-system {
+
+    .fab-tab-list {
+      background: var(--color-background-dark-3);
+      border-bottom: 2px solid var(--color-border-light-1);
+      color: var(--color-text-light-secondary);
+      button {
+        border-radius: 0;
+        &.fab-selected {
+          background: var(--color-border-light-1);
+          color: var(--color-text-light-heading);
+        }
+      }
+    }
+  }
+
 }
 
 /*
@@ -121,18 +199,53 @@ BEGIN COMMON STRUCTURAL STYLES
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: flex-start;
+  min-width: 240px;
+  max-width: 280px;
 
   .fab-header {
     flex-shrink: 0;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    h1 {
+      margin: 0;
+    }
   }
 
   .fab-items {
     flex-grow: 1;
+    width: 100%;
+    overflow: hidden;
+    .fab-nav-item {
+      .fab-button {
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: center;
+        width: 100%;
+        height: 50px;
+        padding-left: 10px;
+        p {
+          flex-grow: 1;
+        }
+        i.fa-circle {
+          font-size: 6px;
+          margin-right: 10px;
+        }
+        i.fa-circle-exclamation {
+          flex-shrink: 0;
+          position: relative;
+          font-size: 20px;
+          z-index: 1;
+          margin-right: 10px;
+        }
+      }
+    }
   }
 
   .fab-footer {
     flex-shrink: 0;
-    background: var(--color-bg-option);
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -146,10 +259,24 @@ BEGIN COMMON STRUCTURAL STYLES
       justify-content: center;
       align-items: center;
       height: 40px;
-      color: var(--color-bg-btn-minor-inactive);
-      &:hover {
-        color: var(--color-bg-btn-minor-active);
-      }
+    }
+  }
+}
+
+.fab-crafting-system {
+  flex-grow: 1;
+  .fab-tab-list {
+    width: 100%;
+    height: 66px;
+    display: inline-flex;
+    justify-content: space-around;
+    align-content: center;
+    align-items: center;
+    button {
+      height: 46px;
+      width: auto;
+      margin: 0;
+      padding: 0 16px;
     }
   }
 }
@@ -306,36 +433,6 @@ BEGIN COMMON VISUAL STYLES
 =====================================================================
 */
 
-.fabricate-clickable {
-  cursor: pointer;
-}
-
-.fabricate-tag {
-  background: var(--color-border-dark-secondary);
-  color: var(--color-text-light-2);
-  border-radius: 3px;
-  padding: 5px 7px;
-  &.fabricate-selected {
-    background: var(--color-underline-header);
-  }
-}
-
-.fabricate-shadow-underline(@thickness) {
-  position: relative;
-  border-bottom: @thickness solid rgba(0, 0, 0, 0.7);
-  margin-bottom: 4px;
-  &:after {
-    content: " ";
-    display: block;
-    position: absolute;
-    left: 0;
-    width: 100%;
-    bottom: -2px;
-    height: @thickness;
-    background: rgba(255, 255, 255, 0.7);
-  }
-}
-
 /*
 =====================================================================
 END COMMON VISUAL STYLES
@@ -354,103 +451,6 @@ BEGIN ITEM SHEET TAB STYLES
 =====================================================================
 */
 
-.fabricate-item-tab-wrapper {
-
-  overflow-x: hidden;
-  padding-right: 6px;
-  padding-top: 6px;
-
-  .fabricate-item-tab-header {
-    display: flex;
-    align-items: center;
-    padding-bottom: 8px;
-    border-bottom: 1px solid var(--color-border-dark-secondary);
-    margin-bottom: 10px;
-
-    .fabricate-tag-list {
-      flex-grow: 1;
-    }
-
-    .fabricate-title {
-      display: inline-flex;
-      margin-right: 6px;
-      font-size: var(--font-size-18);
-    }
-
-    .fabricate-item-condition {
-      display: inline-flex;
-      height: 24px;
-      width: 24px;
-      font-size: var(--font-size-11);
-    }
-  }
-
-  .fabricate-item-header-outer {
-    border: 1px solid var(--color-border-dark-tertiary);
-    border-radius: 4px;
-    margin-bottom: 10px;
-    padding: 2px
-  }
-
-  .fabricate-item-header {
-    display: flex;
-    align-items: center;
-    box-sizing: border-box;
-    border: 1px solid var(--color-border-dark-secondary);
-    border-radius: 3px;
-    padding: 8px 8px;
-
-    .fabricate-item-conditions {
-      flex-grow: 1;
-    }
-  }
-
-  .fabricate-item-condition {
-    height: 24px;
-    width: 24px;
-    font-size: var(--font-size-11);
-    color: var(--color-text-light-1);
-    background: var(--color-text-dark-2);
-    border-radius: 12px;
-    align-items: center;
-    justify-content: center;
-
-    &.fabricate-warning {
-      background: var(--color-level-warning);
-    }
-
-    &.fabricate-error {
-      background: var(--color-level-error);
-    }
-
-    &.fabricate-info {
-      background: var(--color-level-info);
-    }
-  }
-
-  .fabricate-item-title {
-    color: var(--color-text-dark-1);
-    font-weight: bold;
-    font-size: var(--font-size-14);
-  }
-
-  .fabricate-recipe-ingredients {
-    padding-right: 4px;
-  }
-
-  .fabricate-recipe-results {
-    padding-left: 4px;
-  }
-
-  .fabricate-recipe-ingredients, .fabricate-recipe-results {
-    .fabricate-component-grid {
-      padding: 12px 12px 0px 12px;
-      border: 1px dashed var(--color-border-dark-4);
-      margin-bottom: 8px;
-    }
-  }
-
-}
 /*
 =====================================================================
 END ITEM SHEET TAB STYLES
